
syntax = "proto3";

package inventory;

option go_package = "./proto";

// Message for an inventory item
message Item {
  string id = 1;
  string name = 2;
  string description = 3;
  int32 quantity = 4;
}

// Request and response for adding an item
message AddItemRequest {
  Item item = 1;
}

message AddItemResponse {
  Item item = 1;
}

// Request and response for getting an item
message GetItemRequest {
  string id = 1;
}

message GetItemResponse {
  Item item = 1;
}

// Request and response for listing all items
message ListItemsRequest {}

message ListItemsResponse {
  repeated Item items = 1;
}

// Request and response for deleting an item
message DeleteItemRequest {
  string id = 1;
}

message DeleteItemResponse {
  bool success = 1;
}

// The Inventory service definition
service Service {
  rpc AddItem(AddItemRequest) returns (AddItemResponse);
  rpc GetItem(GetItemRequest) returns (GetItemResponse);
  rpc ListItems(ListItemsRequest) returns (ListItemsResponse);
  rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse);
  rpc Health(HealthRequest) returns (HealthResponse);
  rpc StreamItems(GetItemRequest) returns (stream Item);
}

message HealthRequest {

}

message HealthResponse {
    string status = 1;
}
